[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI環境構築用のパッケージ"
authors = ["dbd-fish"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg = "^3.2.3"
ruff = "^0.7.2"
pytest = "^8.3.3"
mypy = "^1.13.0"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
